src/pages/index.module.scss
.createRoom {
  display: flex;
  flex-direction: column;
  justify-content: center;
  min-width: 50%;
  max-width: 100%;
  padding: 50px;
  padding-top: 0;
  height: 100%;

  span {
    margin: 20px;
    width: 100%;
    max-width: 420px;
    text-align: center;
  }

  > form {
    display: flex;
    flex-direction: row;
    max-width: 100%;

    input {
      background: var(--white);
      border-top-right-radius: 0;
      border-bottom-right-radius: 0;
      max-width: 340px;
      width: 76%;
    }

    button {
      width: 80px;
      max-width: 24%;
      border-top-left-radius: 0;
      border-bottom-left-radius: 0;
      background: var(--purple);

      &:hover {
        background: var(--dark-purple);
      }
    }
  }

  @media (max-width: 1049px) {
    gap: 30px;
    padding: 0;
    align-items: center;
    h1 {
      display: none;
    }
  }
}

